[package]
name = "accountable"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1.22.0", features = ["v5"] }
csv = "1.4.0"
rust_decimal = "1.40.0"
anyhow = "1.0.102"
tokio = { version = "1.50.0", features = [
	"sync",
	"rt",
	"rt-multi-thread",
	"macros",
] }
strum = "0.28.0"
strum_macros = "0.28.0"
log = "0.4.29"
num_cpus = "1.17.0"

[dev-dependencies]
proptest = "1.6.0"
